# Callsort

./: .gitignore  LICENSE  README.md  app_test.py  package-lock.json  package.json
.github/workflows/: build.yml
rustysort/: Cargo.toml
rustysort/src/: main.rs
rustysort/test/: input.xlsx  small_input.csv  small_input_sorted.csv
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: .bash  icon.icns
src-tauri/src/: lib.rs  main.rs
